apps/argocd/sources/base/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-http-https
  namespace: argocd
spec:
  redirectScheme:
    scheme: https
    permanent: true
