apps/argocd/sources/base/grpcroute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: argocd-grpc
  namespace: argocd
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: private
    namespace: traefik
    sectionName: websecure-argocd
  hostnames:
  - argocd.yiannis.io
  rules:
  - matches:
    - headers:
      - name: Content-Type
        type: RegularExpression
        value: "^application/grpc.*$"
    backendRefs:
    - group: ""
      kind: Service
      name: argocd-server
      port: 443
      weight: 1
